--- a/blogpost.html
+++ b/blogpost.html
@@ -27,8 +27,11 @@
                     rockstar. Pero
                     estadísticamente no lo
                     eres.... por ahora.</p>
-                    <p>Suscribete y dale like</p>
-            </div>
+                   <p>Suscribete y dale like</p>
+	    </div>
+	    <div id="footer">
+		    Hecho con amor en Platzi ❤
+	    </div>
         </div>
     </body>
 </html>
